# Copyright (C) 2005-2010 MaNGOS <http://getmangos.com/>
# Copyright (C) 2009-2010 MaNGOSZero <http://github.com/mangoszero/mangoszero/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

## Process this file with automake to produce Makefile.in

## Sub-directories to parse
#SUBDIRS = before_upgrade_to_0.13

## Change installation location
#  datadir = mangos/sql/updates
pkgdatadir = $(datadir)/mangos/sql/updates

## Files to be installed
#  Install basic SQL files to datadir
pkgdata_DATA = \
	z0001_xxx_01_characters_character_db_version.sql \
	z0001_xxx_02_mangos_db_version.sql \
	z0001_xxx_03_realmd_realmd_db_version.sql \
	z0002_083_01_mangos_mangos_string.sql \
	z0002_083_02_mangos_command.sql \
	z0003_086_01_realmd_realmlist.sql \
	z0004_087_01_mangos_command.sql \
	z0013_088_01_mangos_command.sql \
	z0078_xxx_01_mangos_item_template.sql \
	z0082_xxx_01_characters_character_social.sql \
	z0090_089_01_mangos_mangos_string.sql \
	z0095_090_01_mangos_player_xp_for_level.sql \
	z0096_xxx_01_mangos.sql \
	z0101_xxx_01_mangos_item_template.sql \
	z0114_xxx_01_character_kill.sql \
	z0114_xxx_02_characters.sql \
	z0124_xxx_01_characters.sql \
	z0124_xxx_02_mangos.sql \
	z0131_xxx_01_mangos_creature_template.sql \
	z0133_xxx_01_mangos_creature_template.sql \
	z0144_xxx_01_mangos_player_classlevelstats.sql \
	z0155_xxx_01_mangos_player_classlevelstats.sql \
	z0169_091_01_characters_group.sql \
	z0180_092_01_mangos_command.sql \
	z0183_093_01_mangos_command.sql \
        z0185_xxx_01_characters_saved_variables.sql \
	z0212_xxx_01_characters_kill.sql \
	z0226_081_01_mangos_string.sql \
	z0227_094_01_mangos_mangos_string.sql \
	z0238_xxx_01_mangos_quest_template.sql \
	z0271_084_01_mangos_points_of_interest.sql \
	z0271_084_02_mangos_locales_points_of_interest.sql \
	z0289_085_01_mangos_gossip.sql \
	z0289_085_02_mangos_gossip_scripts.sql \
	z0332_xxx_01_mangos_gossip_menu_option.sql \
	z0366_095_01_mangos_creature_template.sql \
	z0367_096_01_mangos_db_script_string.sql \
	z0378_097_01_characters.sql \
	z0379_098_01_mangos_gameobject.sql \
	z0385_099_01_mangos_item_template.sql \
	z0385_099_02_mangos_item_template.sql \
	z0394_xxx_01_mangos_mangos_string.sql \
	z0395_xxx_01_mangos_mangos_string.sql \
	z0404_100_01_mangos_command.sql \
	z0404_100_02_mangos_mangos_string.sql \
	z0405_101_01_mangos_mangos_string.sql \
	z0432_103_01_realmd_realmlist.sql \
	z0433_104_01_realmd_realmlist.sql \
	z0435_105_01_characters_character_stats.sql \
	z0437_106_01_characters.sql \
	z0447_107_01_mangos_gossip_menu_option.sql \
	z0451_108_01_mangos_gameobject_template.sql \
	z0452_109_01_mangos_instance_template.sql \
	README

## Additional files to include when running 'make dist'
#  SQL update files, to upgrade database schema from older revisions
EXTRA_DIST = \
	z0001_xxx_01_characters_character_db_version.sql \
	z0001_xxx_02_mangos_db_version.sql \
	z0001_xxx_03_realmd_realmd_db_version.sql \
	z0002_083_01_mangos_mangos_string.sql \
	z0002_083_02_mangos_command.sql \
	z0003_086_01_realmd_realmlist.sql \
	z0004_087_01_mangos_command.sql \
	z0013_088_01_mangos_command.sql \
	z0078_xxx_01_mangos_item_template.sql \
	z0082_xxx_01_characters_character_social.sql \
	z0090_089_01_mangos_mangos_string.sql \
	z0095_090_01_mangos_player_xp_for_level.sql \
	z0096_xxx_01_mangos.sql \
	z0101_xxx_01_mangos_item_template.sql \
	z0114_xxx_01_character_kill.sql \
	z0114_xxx_02_characters.sql \
	z0124_xxx_01_characters.sql \
	z0124_xxx_02_mangos.sql \
	z0131_xxx_01_mangos_creature_template.sql \
	z0133_xxx_01_mangos_creature_template.sql \
	z0144_xxx_01_mangos_player_classlevelstats.sql \
	z0155_xxx_01_mangos_player_classlevelstats.sql \
	z0169_091_01_characters_group.sql \
	z0180_092_01_mangos_command.sql \
	z0183_093_01_mangos_command.sql \
	z0185_xxx_01_characters_saved_variables.sql \
	z0212_xxx_01_characters_kill.sql \
	z0226_081_01_mangos_string.sql \
	z0227_094_01_mangos_mangos_string.sql \
	z0238_xxx_01_mangos_quest_template.sql \
	z0271_084_01_mangos_points_of_interest.sql \
	z0271_084_02_mangos_locales_points_of_interest.sql \
	z0289_085_01_mangos_gossip.sql \
	z0289_085_02_mangos_gossip_scripts.sql \
	z0332_xxx_01_mangos_gossip_menu_option.sql \
	z0366_095_01_mangos_creature_template.sql \
	z0367_096_01_mangos_db_script_string.sql \
	z0378_097_01_characters.sql \
	z0379_098_01_mangos_gameobject.sql \
	z0385_099_01_mangos_item_template.sql \
	z0385_099_02_mangos_item_template.sql \
	z0394_xxx_01_mangos_mangos_string.sql \
	z0395_xxx_01_mangos_mangos_string.sql \
	z0404_100_01_mangos_command.sql \
	z0404_100_02_mangos_mangos_string.sql \
	z0405_101_01_mangos_mangos_string.sql \
	z0432_103_01_realmd_realmlist.sql \
	z0433_104_01_realmd_realmlist.sql \
	z0435_105_01_characters_character_stats.sql \
	z0437_106_01_characters.sql \
	z0447_107_01_mangos_gossip_menu_option.sql \
	z0451_108_01_mangos_gameobject_template.sql \
	z0452_109_01_mangos_instance_template.sql \
	README
