# Copyright (C) 2005-2010 MaNGOS <http://getmangos.com/>
# Copyright (C) 2009-2010 MaNGOSZero <http://github.com/mangoszero/mangoszero/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

## Process this file with automake to produce Makefile.in

## Sub-directories to parse

## Change installation location
#  datadir = mangos/sql/updates
pkgdatadir = $(datadir)/mangos/sql/updates

## Files to be installed
#  Install basic SQL files to datadir
pkgdata_DATA = \
	README \
	z0001_xxx_01_characters_character_db_version.sql \
	z0001_xxx_02_mangos_db_version.sql \
	z0001_xxx_03_realmd_realmd_db_version.sql \
	z0002_083_01_mangos_mangos_string.sql \
	z0002_083_02_mangos_command.sql \
	z0003_086_01_realmd_realmlist.sql \
	z0004_087_01_mangos_command.sql \
	z0013_088_01_mangos_command.sql \
	z0078_xxx_01_mangos_item_template.sql \
	z0082_xxx_01_characters_character_social.sql \
	z0090_089_01_mangos_mangos_string.sql \
	z0095_090_01_mangos_player_xp_for_level.sql \
	z0096_xxx_01_mangos.sql \
	z0101_xxx_01_mangos_item_template.sql \
	z0114_xxx_01_characters_character_kill.sql \
	z0114_xxx_02_characters.sql \
	z0124_xxx_01_characters.sql \
	z0124_xxx_02_mangos.sql \
	z0131_xxx_01_mangos_creature_template.sql \
	z0133_xxx_01_mangos_creature_template.sql \
	z0144_xxx_01_mangos_player_classlevelstats.sql \
	z0155_xxx_01_mangos_player_classlevelstats.sql \
	z0169_091_01_characters_group.sql \
	z0180_092_01_mangos_command.sql \
	z0183_093_01_mangos_command.sql \
	z0185_xxx_01_characters_saved_variables.sql \
	z0212_xxx_01_characters_kill.sql \
	z0226_081_01_mangos_string.sql \
	z0227_094_01_mangos_mangos_string.sql \
	z0238_xxx_01_mangos_quest_template.sql \
	z0271_084_01_mangos_points_of_interest.sql \
	z0271_084_02_mangos_locales_points_of_interest.sql \
	z0289_085_01_mangos_gossip.sql \
	z0289_085_02_mangos_gossip_scripts.sql \
	z0332_xxx_01_mangos_gossip_menu_option.sql \
	z0366_095_01_mangos_creature_template.sql \
	z0367_096_01_mangos_db_script_string.sql \
	z0378_097_01_characters.sql \
	z0379_098_01_mangos_gameobject.sql \
	z0385_099_01_mangos_item_template.sql \
	z0385_099_02_mangos_item_template.sql \
	z0394_xxx_01_mangos_mangos_string.sql \
	z0395_xxx_01_mangos_mangos_string.sql \
	z0404_100_01_mangos_command.sql \
	z0404_100_02_mangos_mangos_string.sql \
	z0405_101_01_mangos_mangos_string.sql \
	z0432_103_01_realmd_realmlist.sql \
	z0433_104_01_realmd_realmlist.sql \
	z0435_105_01_characters_character_stats.sql \
	z0437_106_01_characters.sql \
	z0447_107_01_mangos_gossip_menu_option.sql \
	z0451_108_01_mangos_gameobject_template.sql \
	z0452_109_01_mangos_instance_template.sql \
	z0456_110_01_mangos_mangos_string.sql \
	z0457_111_01_mangos_mangos_string.sql \
	z0457_111_02_mangos_command.sql \
	z0457_111_03_characters_characters.sql \
	z0457_111_04_mangos_command.sql \
	z0464_112_01_characters_character_skills.sql \
	z0468_113_01_mangos_mangos_string.sql \
	z0468_113_02_mangos_command.sql \
	z0488_xxx_01_mangos_spell_proc_event.sql \
	z0510_114_01_characters_saved_variables.sql \
	z0513_xxx_01_mangos_item_template.sql \
	z0524_115_01_mangos_scripts.sql \
	z0524_115_02_mangos_scripts.sql \
	z0525_116_01_mangos_creature_movement.sql \
	z0525_116_02_mangos_creature_movement_scripts.sql \
	z0526_117_01_mangos_mangos_string.sql \
	z0526_117_02_mangos_command.sql \
	z0537_118_01_mangos_mangos_string.sql \
	z0537_118_02_mangos_command.sql \
	z0540_119_01_mangos_quest_template.sql \
	z0555_120_01_mangos_spell_proc_event.sql \
	z0556_121_01_realmd_realmd_db_version.sql \
	z0557_124_01_mangos_creature_template.sql \
	z0557_124_02_mangos_creature_template.sql \
	z0588_126_02_mangos_spell_proc_event.sql \
	z0595_xxx_01_mangos_spell_proc_event.sql \
	z0627_130_01_mangos_command.sql \
	z0630_131_01_mangos_game_event_pool.sql \
	z0648_132_01_mangos_command.sql \
	z0648_132_02_mangos_mangos_string.sql \
	z0649_133_01_mangos_mangos_string.sql \
	z0652_134_01_mangos_creature_model_info.sql \
	z0662_135_01_mangos_mangos_string.sql \
	z0672_136_01_mangos_mangos_string.sql \
	z0684_139_01_mangos_mangos_string.sql \
	z0718_s0020_01_mangos_playercreateinfo.sql \
	z0726_s0028_01_mangos_playercreateinfo.sql \
	z0735_s0038_01_mangos_command.sql \
	z0736_s0039_01_mangos_command.sql \
	z0738_s0041_01_characters_auctionhouse.sql \
	z0738_s0041_02_mangos_command.sql \
	z0742_s0046_01_mangos_pool_creature.sql \
	z0742_s0046_02_mangos_pool_gameobject.sql \
	z0742_s0046_03_mangos_pool_pool.sql \
	z0759_s0065_01_mangos_creature_addon.sql \
	z0763_s0069_01_mangos_reputation_reward_rate.sql \
	z0764_s0070_01_mangos_reputation_spillover_template.sql \
	z0767_s0075_01_mangos_creature_model_info.sql \
	z0769_s0077_01_mangos_event_id_scripts.sql \
	z0770_s0080_01_mangos_instance_template.sql \
	z0770_s0080_02_mangos_scripted_areatrigger.sql \
	z0770_s0080_03_mangos_scripted_event_id.sql \
	z0774_10008_01_realmd_realmd_db_version.sql \
	z0775_s0083_01_mangos_mangos_string.sql \
	z0778_s0087_01_characters_character_aura.sql \
	z0778_s0087_02_characters_pet_aura.sql \
	z0782_xxxxx_01_mangos_mangos_string.sql \
	z0783_s0091_01_mangos_mangos_string.sql \
	z0783_s0091_02_mangos_command.sql \
	z0788_s0099_01_characters_character_aura.sql \
	z0788_s0099_02_characters_pet_aura.sql \
	z0792_s0103_01_mangos_mangos_string.sql \
	z0792_s0103_02_mangos_command.sql \
	z0801_s0114_01_characters_character_ticket.sql \
	z0801_s0114_02_mangos_command.sql \
	z0801_s0114_03_mangos_mangos_string.sql \
	z0803_s0116_01_mangos_creature_movement_template.sql \
	z0817_xxxxx_01_mangos_game_event.sql \
	z0830_s0148_01_mangos_spell_chain.sql \
	z0831_s0150_01_mangos_spell_chain.sql \
	z0853_xxxxx_01_mangos_creature_template.sql \
	z0869_s0190_02_mangos_spell_bonus_data.sql \
	z0876_s0201_01_characters_characters.sql \
	z0888_s0221_01_mangos_scripts.sql \
	z0889_s0224_01_characters_creature_respawn.sql \
	z0889_s0224_02_characters_gameobject_respawn.sql \
	z0889_s0224_03_mangos_creature_respawn.sql \
	z0889_s0224_04_mangos_gameobject_respawn.sql \
	z0908_s0251_01_mangos_command.sql \
	z0919_s0262_01_mangos_spell_bonus_data.sql \
	z0919_s0298_02_mangos_spell_chain.sql \
	z0967_s0263_01_mangos_mangos_string.sql \
	z0968_s0283_01_mangos_mangos_string.sql \
	z0977_s0345_01_mangos_mangos_string.sql \
	z0978_s0346_01_mangos_mangos_string.sql \
	z0986_s0356_01_mangos_quest_template.sql \
	z1009_s0379_01_mangos_game_event_creature_quest.sql \
	z1011_s0382_01_mangos_game_event_quest.sql \
	z1014_s0386_01_characters_item_loot.sql \
	z1018_s0391_01_mangos_npc_vendor_template.sql \
	z1018_s0391_02_mangos_creature_template.sql \
	z1018_xxxxx_03_mangos_command.sql \
	z1022_s0117_01_mangos_creature_ai_scripts.sql

## Additional files to include when running 'make dist'
#  SQL update files, to upgrade database schema from older revisions
EXTRA_DIST = \
	README \
	z0001_xxx_01_characters_character_db_version.sql \
	z0001_xxx_02_mangos_db_version.sql \
	z0001_xxx_03_realmd_realmd_db_version.sql \
	z0002_083_01_mangos_mangos_string.sql \
	z0002_083_02_mangos_command.sql \
	z0003_086_01_realmd_realmlist.sql \
	z0004_087_01_mangos_command.sql \
	z0013_088_01_mangos_command.sql \
	z0078_xxx_01_mangos_item_template.sql \
	z0082_xxx_01_characters_character_social.sql \
	z0090_089_01_mangos_mangos_string.sql \
	z0095_090_01_mangos_player_xp_for_level.sql \
	z0096_xxx_01_mangos.sql \
	z0101_xxx_01_mangos_item_template.sql \
	z0114_xxx_01_characters_character_kill.sql \
	z0114_xxx_02_characters.sql \
	z0124_xxx_01_characters.sql \
	z0124_xxx_02_mangos.sql \
	z0131_xxx_01_mangos_creature_template.sql \
	z0133_xxx_01_mangos_creature_template.sql \
	z0144_xxx_01_mangos_player_classlevelstats.sql \
	z0155_xxx_01_mangos_player_classlevelstats.sql \
	z0169_091_01_characters_group.sql \
	z0180_092_01_mangos_command.sql \
	z0183_093_01_mangos_command.sql \
	z0185_xxx_01_characters_saved_variables.sql \
	z0212_xxx_01_characters_kill.sql \
	z0226_081_01_mangos_string.sql \
	z0227_094_01_mangos_mangos_string.sql \
	z0238_xxx_01_mangos_quest_template.sql \
	z0271_084_01_mangos_points_of_interest.sql \
	z0271_084_02_mangos_locales_points_of_interest.sql \
	z0289_085_01_mangos_gossip.sql \
	z0289_085_02_mangos_gossip_scripts.sql \
	z0332_xxx_01_mangos_gossip_menu_option.sql \
	z0366_095_01_mangos_creature_template.sql \
	z0367_096_01_mangos_db_script_string.sql \
	z0378_097_01_characters.sql \
	z0379_098_01_mangos_gameobject.sql \
	z0385_099_01_mangos_item_template.sql \
	z0385_099_02_mangos_item_template.sql \
	z0394_xxx_01_mangos_mangos_string.sql \
	z0395_xxx_01_mangos_mangos_string.sql \
	z0404_100_01_mangos_command.sql \
	z0404_100_02_mangos_mangos_string.sql \
	z0405_101_01_mangos_mangos_string.sql \
	z0432_103_01_realmd_realmlist.sql \
	z0433_104_01_realmd_realmlist.sql \
	z0435_105_01_characters_character_stats.sql \
	z0437_106_01_characters.sql \
	z0447_107_01_mangos_gossip_menu_option.sql \
	z0451_108_01_mangos_gameobject_template.sql \
	z0452_109_01_mangos_instance_template.sql \
	z0456_110_01_mangos_mangos_string.sql \
	z0457_111_01_mangos_mangos_string.sql \
	z0457_111_02_mangos_command.sql \
	z0457_111_03_characters_characters.sql \
	z0457_111_04_mangos_command.sql \
	z0464_112_01_characters_character_skills.sql \
	z0468_113_01_mangos_mangos_string.sql \
	z0468_113_02_mangos_command.sql \
	z0488_xxx_01_mangos_spell_proc_event.sql \
	z0510_114_01_characters_saved_variables.sql \
	z0513_xxx_01_mangos_item_template.sql \
	z0524_115_01_mangos_scripts.sql \
	z0524_115_02_mangos_scripts.sql \
	z0525_116_01_mangos_creature_movement.sql \
	z0525_116_02_mangos_creature_movement_scripts.sql \
	z0526_117_01_mangos_mangos_string.sql \
	z0526_117_02_mangos_command.sql \
	z0537_118_01_mangos_mangos_string.sql \
	z0537_118_02_mangos_command.sql \
	z0540_119_01_mangos_quest_template.sql \
	z0555_120_01_mangos_spell_proc_event.sql \
	z0556_121_01_realmd_realmd_db_version.sql \
	z0557_124_01_mangos_creature_template.sql \
	z0557_124_02_mangos_creature_template.sql \
	z0588_126_02_mangos_spell_proc_event.sql \
	z0595_xxx_01_mangos_spell_proc_event.sql \
	z0627_130_01_mangos_command.sql \
	z0630_131_01_mangos_game_event_pool.sql \
	z0648_132_01_mangos_command.sql \
	z0648_132_02_mangos_mangos_string.sql \
	z0649_133_01_mangos_mangos_string.sql \
	z0652_134_01_mangos_creature_model_info.sql \
	z0662_135_01_mangos_mangos_string.sql \
	z0672_136_01_mangos_mangos_string.sql \
	z0684_139_01_mangos_mangos_string.sql \
	z0718_s0020_01_mangos_playercreateinfo.sql \
	z0726_s0028_01_mangos_playercreateinfo.sql \
	z0735_s0038_01_mangos_command.sql \
	z0736_s0039_01_mangos_command.sql \
	z0738_s0041_01_characters_auctionhouse.sql \
	z0738_s0041_02_mangos_command.sql \
	z0742_s0046_01_mangos_pool_creature.sql \
	z0742_s0046_02_mangos_pool_gameobject.sql \
	z0742_s0046_03_mangos_pool_pool.sql \
	z0759_s0065_01_mangos_creature_addon.sql \
	z0763_s0069_01_mangos_reputation_reward_rate.sql \
	z0764_s0070_01_mangos_reputation_spillover_template.sql \
	z0767_s0075_01_mangos_creature_model_info.sql \
	z0769_s0077_01_mangos_event_id_scripts.sql \
	z0770_s0080_01_mangos_instance_template.sql \
	z0770_s0080_02_mangos_scripted_areatrigger.sql \
	z0770_s0080_03_mangos_scripted_event_id.sql \
	z0774_10008_01_realmd_realmd_db_version.sql \
	z0775_s0083_01_mangos_mangos_string.sql \
	z0778_s0087_01_characters_character_aura.sql \
	z0778_s0087_02_characters_pet_aura.sql \
	z0782_xxxxx_01_mangos_mangos_string.sql \
	z0783_s0091_01_mangos_mangos_string.sql \
	z0783_s0091_02_mangos_command.sql \
	z0788_s0099_01_characters_character_aura.sql \
	z0788_s0099_02_characters_pet_aura.sql \
	z0792_s0103_01_mangos_mangos_string.sql \
	z0792_s0103_02_mangos_command.sql \
	z0801_s0114_01_characters_character_ticket.sql \
	z0801_s0114_02_mangos_command.sql \
	z0801_s0114_03_mangos_mangos_string.sql \
	z0803_s0116_01_mangos_creature_movement_template.sql \
	z0817_xxxxx_01_mangos_game_event.sql \
	z0830_s0148_01_mangos_spell_chain.sql \
	z0831_s0150_01_mangos_spell_chain.sql \
	z0853_xxxxx_01_mangos_creature_template.sql \
	z0869_s0190_02_mangos_spell_bonus_data.sql \
	z0876_s0201_01_characters_characters.sql \
	z0888_s0221_01_mangos_scripts.sql \
	z0889_s0224_01_characters_creature_respawn.sql \
	z0889_s0224_02_characters_gameobject_respawn.sql \
	z0889_s0224_03_mangos_creature_respawn.sql \
	z0889_s0224_04_mangos_gameobject_respawn.sql \
	z0908_s0251_01_mangos_command.sql \
	z0919_s0262_01_mangos_spell_bonus_data.sql \
	z0919_s0298_02_mangos_spell_chain.sql \
	z0967_s0263_01_mangos_mangos_string.sql \
	z0968_s0283_01_mangos_mangos_string.sql \
	z0977_s0345_01_mangos_mangos_string.sql \
	z0978_s0346_01_mangos_mangos_string.sql \
	z0986_s0356_01_mangos_quest_template.sql \
	z1009_s0379_01_mangos_game_event_creature_quest.sql \
	z1011_s0382_01_mangos_game_event_quest.sql \
	z1014_s0386_01_characters_item_loot.sql \
	z1018_s0391_01_mangos_npc_vendor_template.sql \
	z1018_s0391_02_mangos_creature_template.sql \
	z1018_xxxxx_03_mangos_command.sql \
	z1022_s0117_01_mangos_creature_ai_scripts.sql
